--- a/templates/team.html
+++ b/templates/team.html
@@ -6,6 +6,7 @@
     <title>Лікарі — клініка Щолокових</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/team.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile.css') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
 </head>
 <body>
@@ -42,9 +43,9 @@
             <p class="position">Головний лікар</p>
         </article>
         <article class="doctor-card">
-            <img src="{{ url_for('static', filename='assets/doctor2.jpg') }}" alt="Мельник Іван Миколайович">
-            <h4>Мельник Іван Миколайович</h4>
-            <p class="position">Помічник</p>
+            <img src="{{ url_for('static', filename='assets/doctor1.jpg') }}" alt="Остапенко Олексій Дмитрович">
+            <h4>Остапенко Олексій Дмитрович</h4>
+            <p class="position">Лікар-стоматолог, хірург</p>
         </article>
         <article class="doctor-card">
             <img src="{{ url_for('static', filename='assets/doctor3.jpg') }}" alt="Негреба Наталія Іванівна">
@@ -52,9 +53,19 @@
             <p class="position">Лікар-стоматолог-терапевт</p>
         </article>
         <article class="doctor-card">
-            <img src="{{ url_for('static', filename='assets/doctor1.jpg') }}" alt="Остапенко Олексій Дмитрович">
-            <h4>Остапенко Олексій Дмитрович</h4>
-            <p class="position">Лікар-стоматолог, хірург</p>
+            <img src="{{ url_for('static', filename='assets/doctor5.jpg') }}" alt="Обіход Олександр Андрійович">
+            <h4>Обіход Олександр Андрійович</h4>
+            <p class="position">лікар-стоматолог ортопед</p>
+        </article>
+        <article class="doctor-card">
+            <img src="{{ url_for('static', filename='assets/doctor6.jpg') }}" alt="Бринзюк Ольга Володимирівна">
+            <h4>Бринзюк Ольга Володимирівна</h4>
+            <p class="position">лікар-стоматолог ортодонт</p>
+        </article>
+        <article class="doctor-card">
+            <img src="{{ url_for('static', filename='assets/doctor2.jpg') }}" alt="Мельник Іван Миколайович">
+            <h4>Мельник Іван Миколайович</h4>
+            <p class="position">Помічник</p>
         </article>
     </section>
 
