--- a/templates/team.html
+++ b/templates/team.html
@@ -65,7 +65,7 @@
         <article class="doctor-card">
             <img src="{{ url_for('static', filename='assets/doctor2.jpg') }}" alt="Мельник Іван Миколайович">
             <h4>Мельник Іван Миколайович</h4>
-            <p class="position">Помічник</p>
+            <p class="position">Асистент лікаря-стоматолога</p>
         </article>
     </section>
 
